VLC 4.0 video color settings are corrupted.

VLC 4.0 Turning on interactive zoom destroys user-defined video frame contrast, saturation, color level, brightness, Gamma and other video color control items.

Hello friend! 😜🍦. Whenever I turn on interactive zoom in VLC 4.0, VLC 4.0 breaks my pre-defined video hue, brightness, contrast, saturation, gamma, and other video color controls, and I'm expecting the great VLC development team to fix this in VLC 4.0.

My PC environment information is as follows:

  1. Windows 10 19044
  2. vlc-4.0.0-dev-win64-57f26370.7z (vlc/nightly-win64/20240902-0420/)

Example video:

Example_video.zip

The colors of the video frame that I had predefined in VLC before I enabled interactive zoom: image

image

image

The colors of the video frame in VLC after interactive zoom is enabled:

image

image

image

The color comparison of the images in the image above illustrates this point: VLC 4.0 with Interactive Scaling enabled destroys the user-defined video hue, brightness, contrast, saturation, gamma, and other video color controls.

The normal result should be: The color of the video screen after the user has turned on interactive scaling should be consistent with the color of the video screen before the user has turned on interactive scaling.

I often use VLC's interactive zoom feature in post-production to zoom in and analyze the color of small images, so this interactive zoom feature is very well designed! I hope the VLC team can fix this problem in VLC 4.0. A big thank you to the great guys (VLC team) for a great media tool! 🏆🎉👍😜


I would like to thank you for providing one of the best media players in the world! I wish you all the best!🍦🏆👍👍👍😜

Edited by François Cartegnie